# cvss

./: CMakeLists.txt  README.md
.github/workflows/: codeql.yml
doc/: cvss.1
fuzz/: test1.cpp
include/: cvss.h
src/: CMakeLists.txt  cvss.cpp  cvss.h  cvss_3.cpp  cvss_3.h  cvss_3_1.cpp  cvss_3_1.h  main.cpp
